k8s/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: test
  ports:
  - name: 
    port: 80
    targetPort: 80
